--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
+    "vue-pdf": "4.3.0",
     "vue-router": "^3.5.3",
     "vuetify": "^2.6.2"
   },
