--- a/package.json
+++ b/package.json
@@ -12,21 +12,17 @@
     "vue": "^2.6.11",
     "vue-pdf": "4.3.0",
     "vue-router": "^3.5.3",
-    "vuetify": "^2.6.2"
+    "vuetify": "^2.6.15"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-router": "^4.5.15",
     "@vue/cli-service": "~4.5.0",
-    "babel-eslint": "^10.1.0",
-    "deepmerge": "^4.2.2",
-    "eslint": "^6.7.2",
-    "node-sass": "^5.0.0",
-    "sass": "^1.32.13",
-    "sass-loader": "^10.2.1",
+    "deepmerge": "^4.3.1",
+    "sass": "~1.32",
+    "sass-loader": "^10.4.1",
     "vue-cli-plugin-vuetify": "~2.4.5",
     "vue-template-compiler": "^2.6.11",
-    "vuetify-loader": "^1.7.0",
+    "vuetify-loader": "^1.9.2",
     "webpack-chain": "^6.5.1"
   },
   "eslintConfig": {
